@@ -1,3 +1,5 @@
+  - Documentation routing info to each controller
+
 v0.3.2    Mon Jun  8 16:31:12 2015 KST
   - active 상태가 오락가락하는 버그 수정(https://github.com/opencloset/monitor/issues/15)
   - save cookie file after success authentication
